// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expensesSumary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     for a total of 
    $2.45
  </h1>
</div>
`;

exports[`should render expensesSumary with more expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     for a total of 
    $4.00
  </h1>
</div>
`;
